--- a/src/app/+ui-wrapper/ui-wrapper.component.html
+++ b/src/app/+ui-wrapper/ui-wrapper.component.html
@@ -11,8 +11,8 @@
     <h3>{{selectedTable ? "The currently selected table is: " + selectedTable : "No Table Selected"}}</h3>
 </div>
 
-<div style="margin-top: 40px;" *ngIf="entityName">
+<div style="margin-top: 40px;" *ngIf="entityDescription">
     <h3>The currently selected entity is: {{tableMetadata[vcb.value].Name}}</h3>
 </div>
 
-<query [entityDescription]="entityName"></query>
+<query [entity]="entityDescription"></query>
