Created observable for dbTables in service

--- a/src/app/+ui-wrapper/ui-wrapper.component.html
+++ b/src/app/+ui-wrapper/ui-wrapper.component.html
@@ -15,4 +15,4 @@
     <h3>The currently selected entity is: {{tableMetadata[vcb.value].Name}}</h3>
 </div>
 
-<query [entity]="entityDescription"></query>
+<query [description]="entityDescription"></query>
