Updated dataQueryService & fixed comboBox

--- a/src/app/+ui-wrapper/query/query.component.html
+++ b/src/app/+ui-wrapper/query/query.component.html
@@ -1,4 +1,3 @@
-<div *ngIf="entityDescription">
-    <label style="font-weight: bold">Description: </label>
-    <p style="Display: inline;"> {{entityDescription}}</p>
-</div>
+<div *ngIf="entityObj">
+{{entityObj.Description}}
+<div>
