--- a/src/app/+ui-wrapper/ui-wrapper.component.html
+++ b/src/app/+ui-wrapper/ui-wrapper.component.html
@@ -1,18 +1,18 @@
-<h1>
-    ui-wrapper testing...
-</h1>
-
 <div class="fieldset">
-    <vaadin-combo-box #vcb label="Tables" [items]="tableNames" [(value)]="selectedTable"
-    (selected-item-changed)="onSelection($event.detail.value)"></vaadin-combo-box>
+    <vaadin-combo-box label="Search" [items]="tableNames" item-label-path="name" item-value-path="entity" [(value)]="selectedEntityName"
+        (selected-item-changed)="selectedItem=$event.detail.value; getNewEntity($event.detail.value)"></vaadin-combo-box>
 </div>
 
-<div style="margin-top: 40px;">
-    <h3>{{selectedTable ? "The currently selected table is: " + selectedTable : "No Table Selected"}}</h3>
+<div *ngIf="selectedItem">
+    <div style="margin-top: 40px;">
+        <h3>{{selectedItem.name ? "The currently selected table is: " + selectedItem.name : "No Table Selected"}}</h3>
+    </div>
 </div>
 
-<div style="margin-top: 40px;" *ngIf="entityDescription">
-    <h3>The currently selected entity is: {{tableMetadata[vcb.value].Name}}</h3>
-</div>
+<div *ngIf="selectedEntityName">
+    <div style="margin-top: 40px;">
+        <h3>The currently selected entity is: {{selectedEntityName}}</h3>
+    </div>
 
-<query [description]="entityDescription"></query>
+    <query [entityObj]="selectedEntity"></query>
+</div>
