--- a/src/app/+ui-wrapper/ui-wrapper.component.html
+++ b/src/app/+ui-wrapper/ui-wrapper.component.html
@@ -13,7 +13,8 @@
     <div class="col-lg-16 filter-section">
         <md-card>
             <!--[entityObj]="selectedEntity" -->
-            <query [tableName]="selectedTable?.name"></query>
+            <!--[tableName]="selectedTable?.name"-->
+            <query></query>
         </md-card>
     </div>
 </div>
