--- a/src/app/+ui-wrapper/query/query-filter/query-filter.component.html
+++ b/src/app/+ui-wrapper/query/query-filter/query-filter.component.html
@@ -3,29 +3,29 @@
     </paper-input>
 
     <vaadin-combo-box label="Select a Field" style="width: 304px; margin-left: .8em; margin-right: .8em; display: inline-block;"
-        [items]="entityProperties" item-label-path="displayName" item-value-path="property" [(value)]="propertyValue" (selected-item-changed)="propertyDataType = $event.detail.value?.dataType;">
+        [items]="entityProperties" item-label-path="displayName" item-value-path="property" [(value)]="model.field" (selected-item-changed)="propertyDataType = $event.detail.value?.dataType;">
         <paper-icon-button icon="remove-circle" class="clear-button"></paper-icon-button>
     </vaadin-combo-box>
 
     <vaadin-combo-box style="width: 224px; margin-left: .8em; margin-right: .8em; display: inline-block;" label="Comparitor"
-        [items]="comparisonOperators" item-label-path="operator" item-value-path="operator" [(value)]="operatorValue">
+        [items]="comparisonOperators" item-label-path="operator" item-value-path="operator" [(value)]="model.comparisonOperator">
         <paper-icon-button icon="remove-circle" class="clear-button"></paper-icon-button>
     </vaadin-combo-box>
 
     <div [ngSwitch]="propertyDataType" style="display:inline-block">
 
-        <paper-input *ngSwitchDefault [(value)]="condition" label="Condition" style="width: 370px; margin-left: .8em; margin-right: .8em;"></paper-input>
+        <paper-input *ngSwitchDefault [(value)]="model.condition" label="Condition" style="width: 370px; margin-left: .8em; margin-right: .8em;"></paper-input>
 
         <vaadin-date-picker *ngSwitchCase=" 'DateTime?' " style="width: 370px; margin-left: .8em; margin-right: .8em;" label="Date"
-            [(value)]="condition"></vaadin-date-picker>
+            [(value)]="model.condition"></vaadin-date-picker>
 
         <div *ngSwitchCase=" 'DateTime' ">
-            <paper-input (focus)="openDialog()" [value]="condition" label="Time" style="width: 370px; margin-left: .8em; margin-right: .8em;">
+            <paper-input (focus)="openDialog()" [value]="model.condition" label="Time" style="width: 370px; margin-left: .8em; margin-right: .8em;">
                 <iron-icon icon="schedule" class="time-icon" suffix></iron-icon>
             </paper-input>
 
             <paper-dialog modal id="dialog" class="paper-time-picker-dialog" on-iron-overlay-closed="dismissDialog">
-                <paper-time-picker id="timePicker" animated=" 'true' " [(time)]="condition"></paper-time-picker>
+                <paper-time-picker id="timePicker" animated=" 'true' " [(time)]="model.condition"></paper-time-picker>
                 <div class="buttons">
                     <paper-button dialog-dismiss>Cancel</paper-button>
                     <paper-button dialog-confirm>OK</paper-button>
