--- a/src/app/+ui-wrapper/ui-wrapper.component.html
+++ b/src/app/+ui-wrapper/ui-wrapper.component.html
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="col-lg-16 filter-section">
         <md-card>
-            <vaadin-combo-box label="Search" [items]="tableNames" item-label-path="name" item-value-path="entity" [(value)]="selectedEntityName"
-                (selected-item-changed)="selectedTable=$event.detail.value; getNewEntity($event.detail.value)">
+            <vaadin-combo-box label="Search" [items]="tableNames" item-label-path="Name" item-value-path="Entity" [(value)]="selectedEntityName"
+                (selected-item-changed)="selectedTable = $event.detail.value; getNewEntity($event.detail.value)">
                 <paper-icon-button icon="remove-circle" class="clear-button"></paper-icon-button>
             </vaadin-combo-box>
         </md-card>
